--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,15 +1,40 @@
 Vagrant.configure("2") do |config|
 
-    config.vm.define "ubuntu" do |ubuntu|
-        ubuntu.vm.box = "ubuntu/trusty64"
-        ubuntu.vm.hostname = "ubuntu"
-        ubuntu.vm.provider "virtualbox" do |v|
-            v.cpus = 1
-            v.memory = 1024
-        end
+    config.vm.box = "ubuntu/trusty64"
+    config.vm.hostname = "ubuntu"
+    #ubuntu.vm.network :private_network, ip: "10.0.0.10"
+    config.vm.network "public_network", bridge: "en0: Wi-Fi (AirPort)"
 
-#        ubuntu.vm.provision:shell, :inline => "apt-get update && apt-get install -y nginx"   
-
-    
+    config.vm.provider "virtualbox" do |v|
+        v.cpus = 2
+        v.memory = 1024
+        v.gui = true
     end
 
+   # config.vm.provision:shell, :inline => "sudo apt-get update && \ 
+   #                                        sudo apt-get install lubuntu-desktop -y"
+
+    
+    # Install xfce and virtualbox additions
+    config.vm.provision:shell, inline: "sudo apt-get update"
+    
+    config.vm.provision:shell, inline: "sudo apt-get install -y xfce4 virtualbox-guest-dkms virtualbox-guest-utils virtualbox-guest-x11"
+    # Permit anyone to start the GUI
+    config.vm.provision:shell, inline: "sudo sed -i 's/allowed_users=.*$/allowed_users=anybody/' /etc/X11/Xwrapper.config"
+
+    # Install RDP server
+    config.vm.provision:shell, inline: "sudo apt install -y xrdp "
+
+
+    # > startxce4
+
+    # TODO RDP connect 
+
+
+
+    # install Java 8    
+    # sudo apt install -y icedtea-netx icedtea-plugin
+
+    #https://docs.oracle.com/javase/tutorialJWS/samples/deployment/dynamictree_webstartJWSProject/dynamictree_webstart.jnlp
+
+end
