--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -2,34 +2,62 @@ Vagrant.configure("2") do |config|
 
     config.vm.box = "ubuntu/trusty64"
     config.vm.hostname = "ubuntu"
-    #ubuntu.vm.network :private_network, ip: "10.0.0.10"
-    config.vm.network "public_network", bridge: "en0: Wi-Fi (AirPort)"
+    config.vm.network "public_network", type: "dhcp", :bridge => 'en0: Wi-Fi (AirPort)'
 
     config.vm.provider "virtualbox" do |v|
         v.cpus = 2
         v.memory = 1024
-        v.gui = true
     end
-
-   # config.vm.provision:shell, :inline => "sudo apt-get update && \ 
-   #                                        sudo apt-get install lubuntu-desktop -y"
-
     
-    # Install xfce and virtualbox additions
-    config.vm.provision:shell, inline: "sudo apt-get update"
-    
-    config.vm.provision:shell, inline: "sudo apt-get install -y xfce4 virtualbox-guest-dkms virtualbox-guest-utils virtualbox-guest-x11"
-    # Permit anyone to start the GUI
+    config.vm.provision:shell, inline: "export DEBIAN_FRONTEND=noninteractive"
+
+    config.vm.provision:shell, inline: "apt-get update"
+
+    config.vm.provision:shell, inline: "apt-get -y upgrade"
+
+
+    # # Install xfce and virtualbox additions 
+    config.vm.provision:shell, inline: "apt-get install -yf xfce4 virtualbox-guest-dkms virtualbox-guest-utils virtualbox-guest-x11"
     config.vm.provision:shell, inline: "sudo sed -i 's/allowed_users=.*$/allowed_users=anybody/' /etc/X11/Xwrapper.config"
 
-    # Install RDP server
-    config.vm.provision:shell, inline: "sudo apt install -y xrdp "
 
 
-    # > startxce4
 
-    # TODO RDP connect 
+    # Make sure xrdp uses xfce4 
+    config.vm.provision:shell, inline: "echo 'xfce4-session' > /home/ubuntu/.xsession" 
+    config.vm.provision:shell, inline: "echo 'xfce4-session' > /home/vagrant/.xsession" 
 
+    
+    # # Install RDP server - se ne izvede???
+    config.vm.provision:shell, inline: "apt-get install -y xrdp"
+
+   
+
+
+    # /etc/xrdp/startwm.sh
+    # MUY IMPORTANTE!!!!!!!!
+    #!/bin/sh
+    # if [ -r /etc/default/locale ]; then
+    #    . /etc/default/locale
+    #    export LANG LANGUAGE
+    # fi
+    # startxfce4
+
+    # sudo rm /run/xrdp/xrdp.pid ce faila ..
+
+    config.vm.provision:shell, inline: "echo -e '#!/bin/sh\nif [ -r /etc/default/locale ]; then . /etc/default/locale export LANG LANGUAGE fi startxfce4' > /etc/xrdp/startwm.sh" 
+
+
+    config.vm.provision:shell, inline: "service xrdp restart" 
+
+    # # > sudo startxfce4
+
+
+
+
+
+
+    # sudo xrdp service restart 
 
 
     # install Java 8    
