switched to debian, VNC

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,7 +1,7 @@
 Vagrant.configure("2") do |config|
-
-    config.vm.box = "ubuntu/trusty64"
-    config.vm.hostname = "ubuntu"
+    
+    config.vm.box = "debian/jessie64"
+    config.vm.hostname = "debian"
     config.vm.network "public_network", type: "dhcp", :bridge => 'en0: Wi-Fi (AirPort)'
 
     config.vm.provider "virtualbox" do |v|
@@ -9,60 +9,21 @@ Vagrant.configure("2") do |config|
         v.memory = 1024
     end
     
-    config.vm.provision:shell, inline: "export DEBIAN_FRONTEND=noninteractive"
-
     config.vm.provision:shell, inline: "apt-get update"
+    config.vm.provision:shell, inline: "apt-get install -y vim"
+    config.vm.provision:shell, inline: "apt-get install -y tightvncserver"
+    config.vm.provision:shell, inline: "apt-get install -y xfce4-goodies xfce4"
 
-    config.vm.provision:shell, inline: "apt-get -y upgrade"
-
-
-    # # Install xfce and virtualbox additions 
-    config.vm.provision:shell, inline: "apt-get install -yf xfce4 virtualbox-guest-dkms virtualbox-guest-utils virtualbox-guest-x11"
-    config.vm.provision:shell, inline: "sudo sed -i 's/allowed_users=.*$/allowed_users=anybody/' /etc/X11/Xwrapper.config"
-
-
+    config.vm.provision:shell, inline: "mkdir -p /root/.vnc"
+    config.vm.provision:shell, inline: "echo geslo123 | vncpasswd -f > /root/.vnc/passwd"
+    config.vm.provision:shell, inline: "chmod 600 /root/.vnc/passwd" 
 
 
-    # Make sure xrdp uses xfce4 
-    config.vm.provision:shell, inline: "echo 'xfce4-session' > /home/ubuntu/.xsession" 
-    config.vm.provision:shell, inline: "echo 'xfce4-session' > /home/vagrant/.xsession" 
+    # create and modify 'xstartup' file
+    config.vm.provision:shell, inline: "vncserver && vncserver -kill :1 && echo 'startxfce4 &' >> /root/vagrant/.vnc/xstartup" 
 
-    
-    # # Install RDP server - se ne izvede???
-    config.vm.provision:shell, inline: "apt-get install -y xrdp"
+    # start VNC server
+    config.vm.provision:shell, inline: "vncserver -geometry 1920x1080"
 
-   
-
-
-    # /etc/xrdp/startwm.sh
-    # MUY IMPORTANTE!!!!!!!!
-    #!/bin/sh
-    # if [ -r /etc/default/locale ]; then
-    #    . /etc/default/locale
-    #    export LANG LANGUAGE
-    # fi
-    # startxfce4
-
-    # sudo rm /run/xrdp/xrdp.pid ce faila ..
-
-    config.vm.provision:shell, inline: "echo -e '#!/bin/sh\nif [ -r /etc/default/locale ]; then . /etc/default/locale export LANG LANGUAGE fi startxfce4' > /etc/xrdp/startwm.sh" 
-
-
-    config.vm.provision:shell, inline: "service xrdp restart" 
-
-    # # > sudo startxfce4
-
-
-
-
-
-
-    # sudo xrdp service restart 
-
-
-    # install Java 8    
-    # sudo apt install -y icedtea-netx icedtea-plugin
-
-    #https://docs.oracle.com/javase/tutorialJWS/samples/deployment/dynamictree_webstartJWSProject/dynamictree_webstart.jnlp
-
+    # sudo passwd root
 end
