--- a/cloud-init/cloud-init.yaml
+++ b/cloud-init/cloud-init.yaml
@@ -12,4 +12,10 @@ runcmd:
   - chmod 600 /root/.vnc/passwd
   - vncserver && vncserver -kill :1 && echo 'startxfce4 &' >> /root/.vnc/xstartup
   - vncserver -geometry 1920x1080
-  # install JDK 8
+
+  # install jdk 8
+  - cd /root && wget https://files-cdn.liferay.com/mirrors/download.oracle.com/otn-pub/java/jdk/8u121-b13/jdk-8u121-linux-x64.tar.gz
+  - mkdir -p /usr/lib/jvm
+  - tar zxvf /root/jdk-8u121-linux-x64.tar.gz -C /usr/lib/jvm
+  - update-alternatives --install '/usr/bin/java' 'java' '/usr/lib/jvm/jdk1.8.0_121/bin/java' 1
+  - update-alternatives --set java /usr/lib/jvm/jdk1.8.0_121/bin/java
