--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -10,8 +10,11 @@ Vagrant.configure("2") do |config|
     end
 
     
+    
+
     config.vm.provision:shell, inline: "apt-get update"
-    config.vm.provision:shell, inline: "apt-get install -y tightvncserver vim xfce4-goodies xfce4 chromium"
+    
+    config.vm.provision:shell, inline: "apt-get install -y tightvncserver xfce4-goodies xfce4 chromium"
     
     # make sure 'root' can launch Chromium
     config.vm.provision:shell, inline: "echo 'CHROMIUM_FLAGS=--no-sandbox' >> /etc/chromium.d/default"
@@ -30,11 +33,9 @@ Vagrant.configure("2") do |config|
     config.vm.provision:shell, inline: "cd /home/vagrant && wget https://files-cdn.liferay.com/mirrors/download.oracle.com/otn-pub/java/jdk/8u121-b13/jdk-8u121-linux-x64.tar.gz"
     
     config.vm.provision:shell, inline: "mkdir -p /usr/lib/jvm"
-    config.vm.provision:shell, inline: "tar zxvf /home/vagrant/jdk-8u121-linux-x64.tar.gz -C /usr/lib/jvm"
+    config.vm.provision:shell, inline: "tar zxvf /home/vagrant/jdk-8u121-linux-x64.tar.gz -C /usr/lib/jvm && rm /home/vagrant/jdk-8u121-linux-x64.tar.gz"
     config.vm.provision:shell, inline: "update-alternatives --install '/usr/bin/java' 'java' '/usr/lib/jvm/jdk1.8.0_121/bin/java' 1"
     config.vm.provision:shell, inline: "update-alternatives --set java /usr/lib/jvm/jdk1.8.0_121/bin/java"
-
-
-    # docker run -p 8080:8080 -v ~/guacconfig:/config oznu/guacamole
+    config.vm.provision:shell, inline: "echo 'PATH=$PATH:/usr/lib/jvm/jdk1.8.0_121/bin' >> /root/.bashrc"
 
 end
